2008-06-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: Added a _stop() function and
	also iterate main context events after each file is iterated. This
	means we respond to DBus events. Fixed a nasty crash where we were
	fixing static strings added to the database when the
	TrackerCrawler was created.
	
	* src/trackerd/tracker-daemon.c: Changed message from "restarting" to
	"shuting down" when shutting down the daemon.
	
	* src/trackerd/tracker-main.[ch]: Create the crawler in the
	Tracker struct so the shutdown function can stop it immediately.

2008-06-10  Martyn Russell  <martyn@imendio.com>

	* configure.ac: Bumped the version dependency of GLib to 2.16 for
	the new GIO API and remove the old backend code checks.
	
	* data/dbus/tracker-indexer.xml: Added a "ProcessFiles" API call
	and updated the "GetRunning" to return the state as a function
	parameter.
	
	* src/tracker-indexer/tracker-indexer.[ch]: Update all DBus
	functions to include the GError and other parameters so we return
	valid errors when functions fail.
	
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-crawler.[ch]:
	* src/trackerd/tracker-monitor.[ch]: 
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c: 
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-thunderbird.c: 
	* src/trackerd/tracker-process-files.c: Added to handle directory
	monitoring and for crawling the file system. The crawler module
	now contacts the indexer and sends files it finds across DBus. 
	
	* src/trackerd/tracker-db.c: Use tracker_monitor_() instead of
	tracker_watcher_().
	
	* src/trackerd/tracker-dbus.[ch]: Added a function to get the
	DBusGProxy for the indexer client connection.
	
	* src/trackerd/tracker-main.c: Initialise the TrackerCrawler
	object so it crawls $HOME for now for testing.

	* src/trackerd/tracker-watcher*.[ch]: Removed in favour of
	tracker-monitor.[ch]. 

2008-06-10  Carlos Garnacho  <carlos@imendio.com>
